<resources>
    <string name="app_name">ToDoFromKotlinTeam</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_subtitle">This is a different kind of calendar from what you might be used to.
Solar calendar will try to put you in sync with a more natural rest and work cycle</string>
    <string name="welcome_button">NEXT</string>
    <string name="restart">Restart</string>
    <string name="plan_tab_title">Your Plan</string>
    <string name="ideas_tab_title">Your Ideas</string>
    <string name="profile_tab_title">Profile</string>
    <string name="settings_tab_title">Settings</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="new_event">New event</string>
    <string name="ok">OK</string>
    <string name="enterStartTimeTitle">Enter start time</string>
    <string name="enterEndTimeTitle">Enter end time</string>
    <string name="ideas">Ideas</string>
    <string name="plans">Plans</string>
    <string name="event_name">Enter event name here</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_button">UPDATE EVENT</string>
    <string name="update_title">UPDATE</string>
    <string name="title_new">Today\'s events</string>
    <string name="title_accept">Accepted events</string>

</resources>
