<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="19dp"
    android:paddingRight="19dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp"
        android:background="@drawable/item_background_shape">

    <CheckBox
        android:id="@+id/checkPlans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plans"
        android:textSize="28sp"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkIdeas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ideas"
        android:textSize="28sp"
        tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="150dp"
        android:layout_height="74dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="-37dp"
        android:background="@drawable/circle_shape"
        android:fontFamily="@font/gill_sans_semibold"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>