<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="right"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_shape"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gill_sans_regular"
            android:text="@string/enterStartTimeTitle"
            android:textColor="@color/text_title"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/startTimeEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="time"
                android:digits="0123456789"
                app:mask="##:##"
                android:layout_marginLeft="19dp"
                android:maxLength="5"
                android:background="@android:drawable/editbox_background_normal" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/gill_sans_regular"
            android:text="@string/enterEndTimeTitle"
            android:textColor="@color/text_title"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/endTimeEditText"
                android:layout_width="100dp"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:maxLength="5"
               android:digits="0123456789"
                app:mask="##:##"
                android:layout_marginLeft="19dp"
                android:background="@android:drawable/editbox_background_normal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="150dp"
        android:layout_height="74dp"
        android:layout_marginTop="-37dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/main_orange"
        android:fontFamily="@font/gill_sans_semibold"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>